--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -310,6 +310,10 @@ jobs:
         uses: shogo82148/actions-setup-redis@v1
         with:
           redis-version: "6.x"
+      # MacOS Arm64 下需要下面的修复，否则无法编译成功
+      - name: Fix include
+        run: |
+          sudo ln -s $(brew --prefix pcre2)/include/pcre2.h /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/
       - name: Get Openssl Dir
         id: opecssl-dir
         run: echo "path=$(brew --prefix openssl@1.1)" >> $GITHUB_OUTPUT
