修复每日测试的 Swoole 编译

--- a/.github/workflows/daily-test.yml
+++ b/.github/workflows/daily-test.yml
@@ -6,9 +6,15 @@ on:
   push:
     paths:
       - ".github/workflows/daily-test.yml"
+      - ".github/docker-compose.yml"
+      - ".github/php.dockerfile"
+      - ".github/actions/ci-prepare"
   pull_request:
     paths:
       - ".github/workflows/daily-test.yml"
+      - ".github/docker-compose.yml"
+      - ".github/php.dockerfile"
+      - ".github/actions/ci-prepare"
 
 jobs:
   daily-test-3_0:
