--- a/.github/workflows/daily-test.yml
+++ b/.github/workflows/daily-test.yml
@@ -6,9 +6,15 @@ on:
   push:
     paths:
       - ".github/workflows/daily-test.yml"
+      - ".github/docker-compose.yml"
+      - ".github/php.dockerfile"
+      - ".github/actions/ci-prepare"
   pull_request:
     paths:
       - ".github/workflows/daily-test.yml"
+      - ".github/docker-compose.yml"
+      - ".github/php.dockerfile"
+      - ".github/actions/ci-prepare"
 
 jobs:
   daily-test-3_0:
@@ -33,8 +39,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          ref: "3.0"
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
